--- a/JS/index.html
+++ b/JS/index.html
@@ -6,8 +6,10 @@
     <title>Send POST Request</title>
 </head>
 <body>
+    <button id="sendRequest">Send Request</button>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('sendRequest').addEventListener('click', function() {
             const url = 'https://eda.ru/api/v2/graphql';
             const data = [
                 {
@@ -16,34 +18,28 @@
                 }
             ];
 
-            // Функция для получения заголовков
-            function getHeaders() {
-                const headers = new Headers();
-                headers.append('Content-Type', 'application/json');
-                headers.append('Accept', '*/*');
-                headers.append('Accept-Language', navigator.language || 'ru-RU,ru;q=0.9');
-                headers.append('User-Agent', navigator.userAgent);
-                headers.append('Sec-Ch-Ua-Platform', 'Windows');
-                headers.append('Sec-Ch-Ua', 'Not?A_Brand;v="99", "Chromium";v="130"');
-                headers.append('Sec-Ch-Ua-Mobile', '?0');
-                headers.append('Origin', window.location.origin);
-                headers.append('Sec-Fetch-Site', 'same-origin');
-                headers.append('Sec-Fetch-Mode', 'cors');
-                headers.append('Sec-Fetch-Dest', 'empty');
-                headers.append('X-Bug-Bounty', 'kolyasik');
-                headers.append('Priority', 'u=1, i');
-
-                // Добавление других заголовков, если они доступны
-                if (document.referrer) {
-                    headers.append('Referer', document.referrer);
-                }
-
-                return headers;
-            }
-
             fetch(url, {
                 method: 'POST',
-                headers: getHeaders(),
+                headers: {
+                    'Host': 'eda.ru',
+                    'Content-Length': JSON.stringify(data).length,
+                    'Sec-Ch-Ua-Platform': 'Windows',
+                    'Authorization': '',
+                    'Accept-Language': 'ru-RU,ru;q=0.9',
+                    'Sec-Ch-Ua': 'Not?A_Brand;v="99", "Chromium";v="130"',
+                    'Sec-Ch-Ua-Mobile': '?0',
+                    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.6723.70 Safari/537.36',
+                    'Accept': '*/*',
+                    'Content-Type': 'application/json',
+                    'Origin': 'https://eda.ru',
+                    'Sec-Fetch-Site': 'same-origin',
+                    'Sec-Fetch-Mode': 'cors',
+                    'Sec-Fetch-Dest': 'empty',
+                    'Referer': 'https://eda.ru/recepty/preview?id=187661%22%3E%3Ctest%3E',
+                    'Accept-Encoding': 'gzip, deflate, br',
+                    'X-Bug-Bounty': 'kolyasik',
+                    'Priority': 'u=1, i'
+                },
                 body: JSON.stringify(data)
             })
             .then(response => response.json())
